--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-:root {
+:root[themes='light'] {
   --text-a: #8b5cf6;
   --text-a-hover: #6d28d9;
   --text-h2h3h4: #111827;
@@ -6,7 +6,7 @@
   --border-block: #374151;
   --text-ol-il: #374151;
 }
-:root[theme='dark'] {
+:root[themes='dark'] {
   --dark-background-color: #374151FF;
   --text-white: white;
   --text-a: #f59e0b;
@@ -446,8 +446,8 @@ audio, canvas, embed, iframe, img, object, svg, video {
 .theme-button {
   cursor: pointer;
   overflow: hidden;
-  width: 24px;
-  height: 11.266px;
+  width: 28px;
+  height: 13.16px;
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -460,10 +460,10 @@ audio, canvas, embed, iframe, img, object, svg, video {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: -13.8px;
-  margin-left: -7.68px;
-  width: 39.594px;
-  height: 39.594px;
+  margin-top: -16.1px;
+  margin-left: -8.96px;
+  width: 46.2px;
+  height: 46.2px;
 }
 
 .pagination-container {
