--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ audio, canvas, embed, iframe, img, object, svg, video {
   vertical-align: middle;
 }
 
-.theme-button {
+.theme-button-index {
   cursor: pointer;
   overflow: hidden;
   width: 28px;
@@ -455,15 +455,37 @@ audio, canvas, embed, iframe, img, object, svg, video {
   background-color: transparent;
   padding: 0;
 }
+.theme-button-page {
+  cursor: pointer;
+  overflow: hidden;
+  width: 24px;
+  height: 11.266px;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
 
-.theme-button-div {
+.theme-button-div-index {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: -16.1px;
   margin-left: -8.96px;
-  width: 46.2px;
-  height: 46.2px;
+  width: 46.188px;
+  height: 46.188px;
+}
+
+.theme-button-div-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -13.8px;
+  margin-left: -7.68px;
+  width: 39.594px;
+  height: 39.594px;
 }
 
 .pagination-container {
