--- a/css/style.css
+++ b/css/style.css
@@ -234,8 +234,9 @@
   margin-top: 1.25em;
   margin-bottom: 2rem;
   margin-left: 2.5rem;
+  counter-reset: section;
 }
-.prose ol>li {
+.prose ol>li, .prose ul>li {
   position: relative;
   padding-left: 1.75em;
 }
@@ -243,8 +244,9 @@
   margin-top: .5em;
   margin-bottom: .5em;
 }
-.prose ol>li:before {
-  content: counter(list-item) ".";
+.prose ul>li:before, .prose ol>li:before {
+  counter-increment: section;
+  content: counters(section, ".") ".";
   position: absolute;
   font-weight: 400;
   color: var(--text-ol-il);
@@ -420,6 +422,9 @@ h1, h2, h3, h4, h5, h6 {
 blockquote, dd, dl, figure, h1, h2, h3, h4, h5, h6, hr, p, pre {
   margin: 0;
 }
+button {
+  outline: none;
+}
 hr {
   margin-top: 1rem;
   border-top-width: 1px;
@@ -538,6 +543,9 @@ input::-moz-placeholder {
   color: var(--text);
   transition: width 150ms ease-in;
 }
+.search-input:focus {
+  outline: none;
+}
 
 .theme-button-page {
   cursor: pointer;
@@ -608,5 +616,76 @@ input::-moz-placeholder {
 }
 
 
+.btn-copy {
+    display: inline-block;
+    cursor: pointer;
+    background-color: #eee;
+    background-image: linear-gradient(#fcfcfc,#eee);
+    border: 1px solid #d5d5d5;
+    border-radius: 3px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-appearance: none;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 20px;
+    color: #333;
+    -webkit-transition: opacity .3s ease-in-out;
+    -o-transition: opacity .3s ease-in-out;
+    transition: opacity .3s ease-in-out;
+    padding: 2px 6px;
+    float: right;
+    opacity: 0;
+}
 
+.language-md:hover .btn-copy{
+  opacity: 1;
+}
+
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0px;
+  width: 100%;
+  overflow: auto;
+  break-inside: auto;
+  text-align: left;
+  margin: 0.8em 0;
+  padding: 0;
+  word-break: initial;
+}
+
+table tr th {
+  border-bottom-width: 0px;
+}
+
+table tr {
+  border: 1px solid #dfe2e5;
+  margin: 0;
+  padding: 0;
+}
+table tr:nth-child(2n),
+thead {
+  background-color: #f8f8f8;
+}
+table th {
+  font-weight: bold;
+  border: 1px solid #dfe2e5;
+  border-bottom: 0;
+  margin: 0;
+  padding: 6px 13px;
+}
+table td {
+  border: 1px solid #dfe2e5;
+  margin: 0;
+  padding: 6px 13px;
+}
+table th:first-child, table td:first-child {
+  margin-top: 0;
+}
+table th:last-child, table td:last-child {
+  margin-bottom: 0;
+}
 
